--- a/med-repair/src/pages/LandingNotAuth/notauth.css
+++ b/med-repair/src/pages/LandingNotAuth/notauth.css
@@ -2,13 +2,14 @@
   height: 100%;
   width: 100%;
 
-  background: rgb(36, 158, 151);
+  /* background: rgb(36, 158, 151);
   background: linear-gradient(
     0deg,
     rgba(36, 158, 151, 1) 0%,
     rgba(219, 219, 219, 1) 100%
-  );
-
+  ); */
+  background-image: url("../../images/background.png");
+  background-position: center;
   display: inline-flex;
   min-width: 600px;
 }
@@ -53,21 +54,42 @@
   font-weight: 700;
 }
 
+.assist-button {
+  text-align: center;
+  background-color: #fff;
+  margin-top: 35px;
+  border-radius: 1rem;
+  width: 250px;
+  height: 30px;
+  font-weight: 700;
+}
+
 .page .menu-button .button-pictogram img {
   max-width: 100%;
   max-height: 100%;
 }
 
 .page .doctor-pictogram {
-  display: inline-flex;
+  display: inline-block;
   justify-content: center;
   margin: auto;
   height: 200px;
-  width: 200px;
-  border: solid black;
+  width: 250px;
+  /* border: solid black; */
 }
 
-.page .doctor-pictogram img {
+.page .doctor-pictogram .doctor-dialog {
+  display: inline-flex;
+  height: 200px;
+  width: 200px;
+}
+
+.page .doctor-pictogram .doctor-dialog img {
   max-width: 100%;
   max-height: 100%;
+}
+
+.page .doctor-pictogram .doctor-dialog .banner {
+  max-width: 120px;
+  max-height: 100px;
 }
