--- a/med-repair/src/pages/LandingNotAuth/notauth.css
+++ b/med-repair/src/pages/LandingNotAuth/notauth.css
@@ -112,6 +112,12 @@
   text-align: center;
 }
 
+.chat-window .messages-section{
+  border: red solid 1px;
+  width: 100%;
+  height: 320px;
+}
+
 .chat-window .chat-bar {
   height: 40px;
   width: 100%;
