save progress when teodeor is done with login page

--- a/med-repair/src/pages/Landing.css
+++ b/med-repair/src/pages/Landing.css
@@ -189,3 +189,7 @@
   cursor: pointer;
   /* padding-top: 5px; */
 }
+
+.chat-window .message-input .send-button .send-button-text {
+  margin-top: 7px;
+}
