--- a/med-repair/src/components/NavBar.css
+++ b/med-repair/src/components/NavBar.css
@@ -23,7 +23,9 @@
     left: 0;
 }
 
-.navbar .right > p {
+.navbar .right > a {
+    text-decoration: none;
+    color: black;
     margin: 0 20px;
     line-height: 27px;
     font-family: 'Poppins-Medium';
@@ -36,7 +38,7 @@
     transition: all 0.3s ease-in-out;
 }
 
-.navbar .right > p:hover {
+.navbar .right > a:hover {
     border-bottom: 2px solid black;
 }
 
@@ -68,12 +70,18 @@
     margin-left: 20px;
 }
 
-.filled-btn > p {
+.filled-btn > a {
     line-height: 25px;
+    text-decoration: none;
+    color: white;
 }
 
 
 .filled-btn:hover {
     background-color: white;
     color: rgb(63, 63, 63);
+}
+
+.filled-btn:hover > a{
+    color: black;
 }
