--- a/med-repair/src/components/SearchResult.css
+++ b/med-repair/src/components/SearchResult.css
@@ -22,6 +22,7 @@
     margin: 0;
     font-size: 1.3vw;
     letter-spacing: 0.5px;
+    width: 16vw;
 }
 
 .search-result > img {
@@ -34,8 +35,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    margin-right: 2vw;
+    justify-content: left;
+    width: 10vw;
 }
 
 .search-result .result-rating > img {
