--- a/med-repair/src/components/MedicPopup.css
+++ b/med-repair/src/components/MedicPopup.css
@@ -200,6 +200,8 @@
     left: 50%;
     transform: translateX(-50%);
     width: fit-content;
+    min-width: 8vw;
+    min-height: 3vw;
     padding: 0.4vw 1vw;
     background-color: rgb(38, 189, 49);
     border: 1px solid rgb(38, 189, 49);
