--- a/med-repair/src/components/ClinicPopup.css
+++ b/med-repair/src/components/ClinicPopup.css
@@ -73,10 +73,12 @@
   height: 6vw;
   margin-left: 1vw;
   align-self: center;
+  border-radius: 50%;
 }
 
 .clinic-popup .clinic-card {
   display: flex;
+  justify-content: center;
 }
 
 .clinic-popup-content .clinic-card .name {
@@ -109,7 +111,7 @@
 
 .clinic-popup-content .clinic-contact{
     display: flex;
-    margin: 0 auto;
+    margin: 0;
     align-items: center;
 }
 
@@ -121,4 +123,97 @@
 .clinic-popup-content .clinic-contact .contact-wrapper > p{
     margin: 0.6vw;
     font-size: 1vw;
+}
+
+.clinic-popup-content .separator {
+  width: 1px;
+  height: 10vw;
+  margin: auto 2vw;
+  background-color: rgb(203, 203, 203);
+}
+
+.clinic-popup-content .clinic-card .row{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.clinic-popup-content .clinic-card .row > img {
+  height: 2vw;
+}
+
+.clinic-popup-content .clinic-card .row > p {
+  margin: 0.7vw;
+  font-size: 1vw;
+}
+
+.clinic-popup-content .clinic-details {
+  margin-right: 6vw;
+}
+
+.clinic-popup-content .appointment-details .title {
+  margin: 1vw 0 0 0;
+  font-size: 1.3vw;
+  text-align: center;
+}
+
+.clinic-popup-content .appointment-details .indication{
+  margin: 0;
+  margin-bottom: 1vw;
+  font-size: 1vw;
+  text-align: center;
+}
+
+.clinic-popup-content .specialties {
+  margin-top: 1vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: auto;
+  width: 90%;
+}
+
+.clinic-popup-content .specialties .column {
+  width: 50%;
+  margin: 0.5vw;
+}
+
+.clinic-popup-content .specialty{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
+  padding-left: 20%;
+  transition: 0.4s;
+  letter-spacing: 0.5px;
+  border-radius: 0.8vw;
+}
+
+.clinic-popup-content .specialty:hover{
+  background-color: white;
+}
+
+.clinic-popup-content .specialty > img {
+  height: 1.9vw;
+}
+
+.clinic-popup-content .specialty > p {
+  margin: 0.7vw;
+  padding-top: 0.2vw;
+  font-size: 1.1vw;
+}
+
+.clinic-popup-content .medics {
+  width: 60%;
+  margin: 2vw auto;
+  max-height: 20vw;
+}
+
+@keyframes smooth-expand {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 100%;
+  }
 }
