--- a/med-repair/src/components/DropdownList.css
+++ b/med-repair/src/components/DropdownList.css
@@ -50,7 +50,13 @@
     color: white;
 }
 
-.dropdown .chosen-option p {
+.dropdown .chosen-option {
+    height: 3vw;
+    margin: 0;
+    padding: 0;
+}
+
+.dropdown .chosen-option > p {
     font-weight: 500;
     font-size: 1.1vw;
     letter-spacing: 1px;
