--- a/med-repair/src/components/MedicPopup.css
+++ b/med-repair/src/components/MedicPopup.css
@@ -139,7 +139,7 @@
 
 .medic-popup-content .services-wrapper .service{
     background-color: white;
-    padding: 0 0.5vw;
+    padding: 0.3vw 0.5vw;
     border-radius: 1vw;
     width: 15%;
     cursor: pointer;
