--- a/med-repair/src/pages/MyProfile.css
+++ b/med-repair/src/pages/MyProfile.css
@@ -1,9 +1,8 @@
 /* .myprofile-page {
 } */
 .profile-window {
-  position: absolute;
+  position: relative;
   width: 60%;
-  height: 40vw;
   left: 50%;
   top: 55%;
   transform: translate(-50%, -50%);
@@ -16,7 +15,7 @@
 
 .profile-window .user-details {
   font-family: 'Poppins-Medium';
-  margin-top: 20px;
+  margin-top: 1vw;
   height: 15%;
   
 }
@@ -46,26 +45,30 @@
 }
 
 .profile-window .tab-description {
-  padding-top: 10px;
+  padding: 0.3vw 0;
   font-weight: 600;
-  font-size: 1.1vw;
+  font-size: 0.8vw;
   display: flex;
   justify-content: center;
 }
 
 .profile-window .tab-description .key {
-
+  text-align: right;
+  width: 50%;
+  font-size: 0.7vw;
 }
 
 .profile-window .tab-description .value {
-  min-width: 150px;
-  margin-left: 40px;
+  margin-left: 20px;
+  width: 50%;
+  text-align: left;
+  font-size: 0.7vw;
 }
 
 .profile-window .user-personal-data .tab-data {
   display: flex;
   flex-direction: row;
-  margin-top: 5px;
+  margin-bottom: 10px;
   justify-content: center;
   width: 100%;
 }
@@ -106,21 +109,20 @@ text-align: right;
 
 
 .profile-window .user-medical-data {
-  height: 80%;
-  min-height: 250px;
+  height: 20vw;
   width: 90%;
   margin: 30px auto;
   border: solid black 1px;
   box-shadow: 8px 8px 16px 0px rgb(0 0 0 / 20%);
   border-radius: 1rem;
+  overflow-y: scroll;
 }
 
 .profile-window .user-medical-data .history {
   background-color: black;
-  height: 75%;
-  width: 95%;
+  padding: 0 0.5vw 1vw 0.5vw;
   border-radius: 1rem;
-  margin: 20px auto;
+  margin: 5px 2vw;
   display: flex;
   flex-direction: column;
 }
@@ -130,13 +132,14 @@ text-align: right;
   height: 40px;
   font-weight: 600;
   text-align: center;
-  padding-top: 5px;
-  font-size: large;
+  padding: 0.5vw 0 0 0;
+  font-size: 1vw;
+  margin: 0;
 }
 
 .profile-window .user-medical-data .history .history-details {
   width: 90%;
-  height: 30px;
+  
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -145,30 +148,40 @@ text-align: right;
 .profile-window .user-medical-data .history .history-details .key {
   color: #fff;
   width: 10%;
-  min-width: 40px;
   text-align: center;
   margin: 0 auto;
   font-weight: 600;
-  padding-top: 5px;
+  padding-top: 0px;
+  font-size: 0.8vw;
 }
 
 .profile-window .user-medical-data .history .history-value {
   width: 90%;
-  height: 50px;
+  height: 2.6vw;
   margin: 0 auto;
   display: flex;
   background-color: #c4c4c4;
-  margin-top: 15px;
-  border-radius: 1rem;
+  margin-top: 0.6vw;
+  border-radius: 0.5vw;
+  transition: 0.3s;
 }
 
+.profile-window .user-medical-data .history .history-value .medic, .clinic{
+  cursor: pointer;
+}
+
+.profile-window .user-medical-data .history .history-value .medic:hover, .clinic:hover {
+  filter: brightness(1.3);
+  font-weight: 800;
+  transform: scale(1.2);
+} 
+
 .profile-window .user-medical-data .history .history-value .key {
-  width: 30%;
-  /* min-width: 100px; */
+  width: 10%;
   text-align: center;
-  margin: 0 auto;
+  margin: auto;
   font-weight: 600;
-  padding-top: 10px;
+  font-size: 0.7vw;
 }
 
 .profile-window .user-medical-data .history .history-view-button {
